@@ -1,3 +1,8 @@
+2024-08-16  Akkana Peck  <akkana@shallowsky.com>
+
+	Add new photoshare script, and beef up the documentation
+	on metapho's (now three) scripts.
+
 2023-12-27  Akkana Peck  <akkana@shallowsky.com>
 
 	1.1b3: Show filename and number/total in titlebar.
